Testing changes to files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link rel="stylesheet" href="/hfdst5eind/master.css">
+    <link rel="stylesheet" href="css/master.css">
+	  <link rel="stylesheet" href="css/bootstrap-grid.css">
+	  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+	  <link rel="stylesheet" href="css/bootstrap-reboot.css">
+	  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+	  <link rel="stylesheet" href="css/bootstrap.css">
+	  <link rel="stylesheet" href="css/boostrap.min.css">
+	  
     <meta charset="utf-8">
     <title>Fortnite PC's are overpriced.</title>
   </head>
@@ -13,7 +20,7 @@
     <header>
 <h1>THE GRAFFE'S HOME BASE</h1>
     </header>
-    <nav>
+    <nav class="col-xl-12">
         <a href="index.html">Home</a>
         <a href="meer_info.html">More info</a>
         <a href="tijdlijn.html">Contact</a>
@@ -21,7 +28,7 @@
     <div id="bigimage">
       <a href="https://www.twitch.tv/thegraffe" target="_blank">
     <img src="Twitterbanner.png" alt="This image could not be loaded correctly." width="900"></a>
-    <p><b>[PLACEHOLDER]</b></p>
+      <p><strong>Graffe's homepage.</strong></p>
     </div>
     <main>
       <article>
