changed the whole fucking website lmao

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 	  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	  <link rel="stylesheet" href="css/bootstrap.css">
 	  <link rel="stylesheet" href="css/boostrap.min.css">
-	  
+
     <meta charset="utf-8">
     <title>Fortnite PC's are overpriced.</title>
   </head>
   <body>
-    <div id="wrapper">
+    <div id="headwrapper">
     <header>
 <h1>THE GRAFFE'S HOME BASE</h1>
     </header>
+    <hr>
     <nav class="col-xl-12">
-        <a href="index.html">Home</a>
+        <a href="index.html" class="focus">Home</a>
         <a href="meer_info.html">More info</a>
         <a href="tijdlijn.html">Contact</a>
     </nav>
+    </div>
     <div id="bigimage">
-      <a href="https://www.twitch.tv/thegraffe" target="_blank">
-    <img src="Twitterbanner.png" alt="This image could not be loaded correctly." width="900"></a>
-      <p><strong>Graffe's homepage.</strong></p>
+          <p><strong>Graffe's homepage.</strong></p>
     </div>
     <main>
-      <article>
+      <article class="bigleft">
         <h1>Welcome</h1>
         <p>Thank you for visiting my website. By browsing through the variety of tabs provided to you, access to features such as:</p>
         <ul>
@@ -39,25 +39,42 @@
           <li>Information about GRAFFE.</li>
         </ul>
       </article>
-      <article>
+      <div class="bigleft">
+        <img src="logo.png" alt="babages" width="590">
+        <article class="newtext">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </article>
+      </div>
+      <article class="smallright">
         <h1>Introduction</h1>
-        <img src="logo.png" alt="babages" width="348">
         <p>My name is Carlos, also called Graffe on&nbsp;<a href="https://www.twitch.tv/thegraffe" target="_blank">Twitch</a>. I was born in the Netherlands, and I started with streaming around August 2017. The reason behind streaming was simple for me, it was due to my Youtube channel being watched less slowly.</p>
         <p>I really enjoy playing games which led to eventually gathering the courage to broadcast my face on a huge platform, called Twitch. I gathered a stable base of viewers and people that enjoyed the content I streamed into the huge virtual world, this was a point where I felt like I could actually make this part of my life.</p>
         <p>Hence I am now a semi-full time streamer trying to gather a following in order to spread funny and enjoyable content!</p>
       </article>
-      <article id="refresh">
+      <article class="lastarticle">
         <h1>Refresher</h1>
         <p>I'd like to invite you to watch my personal favourite video, published on my Youtube channel.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/cfTQpnveUgg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </article>
     </main>
     <div id="contact">
+      <table>
+        <tr>
+          <td>Volg SuperComputers.</td>
+          <td><a class="focus" href="tijdlijn.html" target="_blank">Ga naar de contactpagina.</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://theuselessweb.com/" target="_blank"><img src="flyingshark.png"></a></td>
+          <td><a href="http://corndog.io/" target="_blank"><img src="weirdduck.jpg"></a></td>
+          <td><a href="http://eelslap.com/" target="_blank"><img src="weirdbat.jpg"></a></td>
+          <td><a href="http://www.staggeringbeauty.com/" target="_blank"><img src="randomowl.jpg"></a></td>
+          <td></td>
+        </tr>
+      </table>
       <p><a href="contact.html">Contact</a></p>
     </div>
     <footer>
       <p>©2018 Carlos Miguel Publicatie zonder toestemming van de auteur is wettelijk verboden.</p>
     </footer>
-    </div>
   </body>
 </html>
