--- a/meer_info.html
+++ b/meer_info.html
@@ -4,37 +4,36 @@
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link rel="stylesheet" href="/hfdst5eind/master.css">
+    <link rel="stylesheet" href="css/master.css">
+	  <link rel="stylesheet" href="css/bootstrap-grid.css">
+	  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+	  <link rel="stylesheet" href="css/bootstrap-reboot.css">
+	  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+	  <link rel="stylesheet" href="css/bootstrap.css">
+	  <link rel="stylesheet" href="css/boostrap.min.css">
     <meta charset="utf-8">
-    <title>GRAFFE'S BASE</title>
+    <title>Fortnite PC's are overpriced.</title>
   </head>
   <body>
     <div id="wrapper">
     <header>
-<h1>YOUR DOSE OF INFORMATION</h1>
+<h1>THE GRAFFE'S HOME BASE</h1>
     </header>
-    <nav>
+    <nav class="col-xl-12">
         <a href="index.html">Home</a>
-        <a href="meer_info.html">More info</a>
+        <a href="meer_info.html" class="focus">More info</a>
         <a href="tijdlijn.html">Contact</a>
     </nav>
     <div id="bigimage">
       <a href="https://www.twitch.tv/thegraffe" target="_blank">
     <img src="Twitterbanner.png" alt="This image could not be loaded correctly." width="900"></a>
-    <p><b>Information page</b></p>
+      <p><strong>Graffe's homepage.</strong></p>
     </div>
     <main>
-      <article>
-        <h1>Necessary info</h1>
-        <div class="newdiv">
-        <p>I am a streamer on Twitch. <br> I am not as active as I want to be.<br> I don't stream on a daily base.</p>
-        </div>
-      </article>
-      <article>
-        <h1>PLACEHOLDER</h1>
-      </article>
       <article id="refresh">
-
+        <h1>Meer informatie</h1>
+        <p>I'd like to invite you to watch my personal favourite video, published on my Youtube channel.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/cfTQpnveUgg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </article>
     </main>
     <div id="contact">
