--- a/tijdlijn.html
+++ b/tijdlijn.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="zxx" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/hfdst5eind/master.css">
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="css/master.css">
+	  <link rel="stylesheet" href="css/bootstrap-grid.css">
+	  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+	  <link rel="stylesheet" href="css/bootstrap-reboot.css">
+	  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+	  <link rel="stylesheet" href="css/bootstrap.css">
+	  <link rel="stylesheet" href="css/boostrap.min.css">
+
     <meta charset="utf-8">
-    <title></title>
+    <title>Fortnite PC's are overpriced.</title>
   </head>
   <body>
-
+    <div id="wrapper">
+    <header>
+<h1>THE GRAFFE'S HOME BASE</h1>
+    </header>
+    <nav class="col-xl-12">
+        <a href="index.html">Home</a>
+        <a href="meer_info.html">More info</a>
+        <a href="tijdlijn.html" class="focus">Contact</a>
+    </nav>
+    <div id="bigimage">
+      <a href="https://www.twitch.tv/thegraffe" target="_blank">
+    <img src="Twitterbanner.png" alt="This image could not be loaded correctly." width="900"></a>
+      <p><strong>Graffe's homepage.</strong></p>
+    </div>
+    <main>
+      <article>
+        <h1>Tijdlijn</h1>
+        <p>I'd like to invite you to watch my personal favourite video, published on my Youtube channel.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/cfTQpnveUgg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </article>
+    </main>
+    <div id="contact">
+      <p><a href="contact.html">Contact</a></p>
+    </div>
+    <footer>
+      <p>©2018 Carlos Miguel Publicatie zonder toestemming van de auteur is wettelijk verboden.</p>
+    </footer>
+    </div>
   </body>
 </html>
