--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	  <link rel="stylesheet" href="css/bootstrap.css">
 	  <link rel="stylesheet" href="css/boostrap.min.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Fortnite PC's are overpriced.</title>
   </head>
@@ -36,6 +36,7 @@
         <p>My name is Carlos, also called Graffe on&nbsp;<a href="https://www.twitch.tv/thegraffe" target="_blank">Twitch</a>. I was born in the Netherlands, and I started with streaming around August 2017. The reason behind streaming was simple for me, it was due to my Youtube channel being watched less slowly.</p>
         <p>I really enjoy playing games which led to eventually gathering the courage to broadcast my face on a huge platform, called Twitch. I gathered a stable base of viewers and people that enjoyed the content I streamed into the huge virtual world, this was a point where I felt like I could actually make this part of my life.</p>
         <p>Hence I am now a semi-full time streamer trying to gather a following in order to spread funny and enjoyable content!</p>
+        <hr>
       </article>
       <article class="bigleft">
         <h1>Welcome</h1>
@@ -43,26 +44,24 @@
         <ul>
           <li>Direct social media links.</li>
           <li>Information about GRAFFE.</li>
+          <hr>
         </ul>
       </article>
       <article class="lastarticle">
         <h1>Refresher</h1>
         <p>I'd like to invite you to watch my personal favourite video, published on my Youtube channel.</p>
         <iframe width="758" height="286" src="https://www.youtube.com/embed/cfTQpnveUgg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <hr>
       </article>
     </main>
     <div id="contact">
       <table>
         <tr>
-          <td>Volg SuperComputers.</td>
-          <td><a class="focus" href="tijdlijn.html" target="_blank">Ga naar de contactpagina.</a></td>
+          <hr>
+          <td><a class="focus" href="https://www.twitch.tv/thegraffe" target="_blank">Follow GRAFFE</a></td>
         </tr>
         <tr>
           <td><a href="https://theuselessweb.com/" target="_blank"><img src="flyingshark.png"></a></td>
-          <td><a href="http://corndog.io/" target="_blank"><img src="weirdduck.jpg"></a></td>
-          <td><a href="http://eelslap.com/" target="_blank"><img src="weirdbat.jpg"></a></td>
-          <td><a href="http://www.staggeringbeauty.com/" target="_blank"><img src="randomowl.jpg"></a></td>
-          <td></td>
         </tr>
       </table>
       <p><a href="contact.html">Contact</a></p>
