--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
-	  <link rel="stylesheet" href="css/bootstrap-grid.css">
-	  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-	  <link rel="stylesheet" href="css/bootstrap-reboot.css">
-	  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-	  <link rel="stylesheet" href="css/bootstrap.css">
-	  <link rel="stylesheet" href="css/boostrap.min.css">
+    <link rel="stylesheet" href="css/mobilestyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Fortnite PC's are overpriced.</title>
