--- a/index.html
+++ b/index.html
@@ -6,24 +6,37 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/mobilestyle.css">
+    <link rel="function" href="js/function.js">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Fortnite PC's are overpriced.</title>
   </head>
   <body>
+    <script>
+    function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+    x.className += " responsive";
+    } else {
+    x.className = "topnav";
+    }
+    }
+    </script>
     <div id="headwrapper">
     <header>
 <h1>THE GRAFFE'S HOME BASE</h1>
     </header>
-    <hr>
-    <nav class="col-xl-12">
-        <a href="index.html" class="focus">Home</a>
-        <a href="meer_info.html">More info</a>
-        <a href="tijdlijn.html">Contact</a>
-    </nav>
+<div class="topnav" id="myTopnav">
+  <a href="index.html" class="active">Home</a>
+  <a href="meer_info.html">News</a>
+  <a href="tijdlijn.html">Contact</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i></a>
+</div>
     </div>
     <div id="bigimage">
-          <p><strong>Graffe's homepage.</strong></p>
+          <p>Graffe's homepage.</p>
     </div>
     <main>
       <article class="bigleft">
@@ -32,7 +45,6 @@
         <ul>
           <li>Direct social media links.</li>
           <li>Information about GRAFFE.</li>
-          <hr>
         </ul>
       </article>
       <article class="smallright">
@@ -40,13 +52,11 @@
         <p>My name is Carlos, also called Graffe on&nbsp;<a href="https://www.twitch.tv/thegraffe" target="_blank">Twitch</a>. I was born in the Netherlands, and I started with streaming around August 2017. The reason behind streaming was simple for me, it was due to my Youtube channel being watched less slowly.</p>
         <p>I really enjoy playing games which led to eventually gathering the courage to broadcast my face on a huge platform, called Twitch. I gathered a stable base of viewers and people that enjoyed the content I streamed into the huge virtual world, this was a point where I felt like I could actually make this part of my life.</p>
         <p>Hence I am now a semi-full time streamer trying to gather a following in order to spread funny and enjoyable content!</p>
-        <hr>
       </article>
       <article class="lastarticle">
         <h1>Refresher</h1>
         <p>I'd like to invite you to watch my personal favourite video, published on my Youtube channel.</p>
         <iframe width="758" height="286" src="https://www.youtube.com/embed/cfTQpnveUgg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <hr>
       </article>
     </main>
     <div id="contact">
