--- a/index.html
+++ b/index.html
@@ -81,14 +81,9 @@
     <div id="contact">
       <table>
         <tr>
-          <hr>
-          <td><a class="focus" href="https://www.twitch.tv/thegraffe" target="_blank">Follow GRAFFE</a></td>
-        </tr>
-        <tr>
-          <td><a href="https://theuselessweb.com/" target="_blank"><img src="flyingshark.png"></a></td>
+          <td><a class= "active" id="follow" href="https://www.twitch.tv/thegraffe" target="_blank">Follow GRAFFE</a></td>
         </tr>
       </table>
-      <p><a href="contact.html">Contact</a></p>
     </div>
     <footer>
       <p>©2018 Carlos Miguel Publicatie zonder toestemming van de auteur is wettelijk verboden.</p>
