--- a/meer_info.html
+++ b/meer_info.html
@@ -5,43 +5,71 @@
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
-	  <link rel="stylesheet" href="css/bootstrap-grid.css">
-	  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-	  <link rel="stylesheet" href="css/bootstrap-reboot.css">
-	  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-	  <link rel="stylesheet" href="css/bootstrap.css">
-	  <link rel="stylesheet" href="css/boostrap.min.css">
+    <link rel="stylesheet" href="css/plusphones.css">
+    <link rel="stylesheet" href="css/normaliphones.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Fortnite PC's are overpriced.</title>
   </head>
   <body>
-    <div id="wrapper">
+
+    <script>
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function() {scrollFunction()};
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("myBtn").style.display = "block";
+      } else {
+        document.getElementById("myBtn").style.display = "none";
+      }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0; // For Safari
+      document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+    }
+
+      function myFunction() {
+          var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+              x.className += " responsive";
+            } else {
+              x.className = "topnav";
+            }
+          }
+    </script>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="uparrow.png"></button>
+    <div id="headwrapper">
     <header>
 <h1>THE GRAFFE'S HOME BASE</h1>
     </header>
-    <nav class="col-xl-12">
-        <a href="index.html">Home</a>
-        <a href="meer_info.html" class="focus">More info</a>
-        <a href="tijdlijn.html">Contact</a>
-    </nav>
+<div class="topnav" id="myTopnav">
+  <a href="index.html">Home</a>
+  <a href="meer_info.html" class="active">News</a>
+  <a href="tijdlijn.html">Contact</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i></a>
+</div>
+    </div>
     <div id="bigimage">
-      <a href="https://www.twitch.tv/thegraffe" target="_blank">
-    <img src="Twitterbanner.png" alt="This image could not be loaded correctly." width="900"></a>
-      <p><strong>Graffe's homepage.</strong></p>
+          <p>Graffe's homepage.</p>
     </div>
     <main>
-      <article id="refresh">
+      <article class="bigleft">
         <h1>Meer informatie</h1>
-        <p>I'd like to invite you to watch my personal favourite video, published on my Youtube channel.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/cfTQpnveUgg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Thank you for visiting my website. By browsing through the variety of tabs provided to you, access to features such as:</p>
+        <ul>
+          <li>Direct social media links.</li>
+          <li>Information about GRAFFE.</li>
+        </ul>
       </article>
     </main>
-    <div id="contact">
-      <p><a href="contact.html">Contact</a></p>
-    </div>
+
     <footer>
       <p>©2018 Carlos Miguel Publicatie zonder toestemming van de auteur is wettelijk verboden.</p>
     </footer>
-    </div>
   </body>
 </html>
