--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/plusphones.css">
     <link rel="stylesheet" href="css/normaliphones.css">
@@ -13,8 +14,23 @@
     <title>Fortnite PC's are overpriced.</title>
   </head>
   <body>
-
     <script>
+    // Get the video
+var video = document.getElementById("myVideo");
+
+// Get the button
+var btn = document.getElementById("mySNDBtn");
+
+// Pause and play the video, and change the button text
+function mySCNDFunction() {
+  if (video.paused) {
+    video.play();
+    btn.innerHTML = "Pause";
+  } else {
+    video.pause();
+    btn.innerHTML = "Play";
+  }
+}
     // When the user scrolls down 20px from the top of the document, show the button
     window.onscroll = function() {scrollFunction()};
 
@@ -56,6 +72,7 @@
     </div>
     <div id="bigimage">
           <p>Graffe's homepage.</p>
+          <button id="mySNDBtn" onclick="mySCNDFunction()">Pause</button>
     </div>
     <main>
       <article class="bigleft">
@@ -71,6 +88,10 @@
         <p>My name is Carlos, also called Graffe on&nbsp;<a href="https://www.twitch.tv/thegraffe" target="_blank">Twitch</a>. I was born in the Netherlands, and I started with streaming around August 2017. The reason behind streaming was simple for me, it was due to my Youtube channel being watched less slowly.</p>
         <p>I really enjoy playing games which led to eventually gathering the courage to broadcast my face on a huge platform, called Twitch. I gathered a stable base of viewers and people that enjoyed the content I streamed into the huge virtual world, this was a point where I felt like I could actually make this part of my life.</p>
         <p>Hence I am now a semi-full time streamer trying to gather a following in order to spread funny and enjoyable content!</p>
+        <video autoplay muted loop id="myVideo">
+      <source src="Petersen_Automotive_Museum.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+    </video>
       </article>
       <article class="lastarticle">
         <h1>Refresher</h1>
