--- a/index.html
+++ b/index.html
@@ -15,22 +15,6 @@
   </head>
   <body>
     <script>
-    // Get the video
-var video = document.getElementById("myVideo");
-
-// Get the button
-var btn = document.getElementById("mySNDBtn");
-
-// Pause and play the video, and change the button text
-function mySCNDFunction() {
-  if (video.paused) {
-    video.play();
-    btn.innerHTML = "Pause";
-  } else {
-    video.pause();
-    btn.innerHTML = "Play";
-  }
-}
     // When the user scrolls down 20px from the top of the document, show the button
     window.onscroll = function() {scrollFunction()};
 
@@ -57,6 +41,8 @@ function mySCNDFunction() {
             }
           }
     </script>
+    <button onclick="pauseVid()" type="button">Pause</button>
+    <button onclick="playVid()" type="button">Play</button>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="uparrow.png"></button>
     <div id="headwrapper">
     <header>
@@ -72,9 +58,13 @@ function mySCNDFunction() {
     </div>
     <div id="bigimage">
           <p>Graffe's homepage.</p>
-          <button id="mySNDBtn" onclick="mySCNDFunction()">Pause</button>
     </div>
+
     <main>
+      <video autoplay muted loop id="myVideo" >
+        <source src="Petersen_Automotive_Museum.mp4" type="video/mp4" >
+          Your browser does not support HTML5 video.
+      </video>
       <article class="bigleft">
         <h1>Welcome</h1>
         <p>Thank you for visiting my website. By browsing through the variety of tabs provided to you, access to features such as:</p>
@@ -88,10 +78,7 @@ function mySCNDFunction() {
         <p>My name is Carlos, also called Graffe on&nbsp;<a href="https://www.twitch.tv/thegraffe" target="_blank">Twitch</a>. I was born in the Netherlands, and I started with streaming around August 2017. The reason behind streaming was simple for me, it was due to my Youtube channel being watched less slowly.</p>
         <p>I really enjoy playing games which led to eventually gathering the courage to broadcast my face on a huge platform, called Twitch. I gathered a stable base of viewers and people that enjoyed the content I streamed into the huge virtual world, this was a point where I felt like I could actually make this part of my life.</p>
         <p>Hence I am now a semi-full time streamer trying to gather a following in order to spread funny and enjoyable content!</p>
-        <video autoplay muted loop id="myVideo">
-      <source src="Petersen_Automotive_Museum.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
-    </video>
+
       </article>
       <article class="lastarticle">
         <h1>Refresher</h1>
