--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             }
           }
     </script>
-    <button onclick="pauseVid()" type="button">Pause</button>
-    <button onclick="playVid()" type="button">Play</button>
+
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="uparrow.png"></button>
     <div id="headwrapper">
     <header>
@@ -61,7 +60,7 @@
     </div>
 
     <main>
-      <video autoplay muted loop id="myVideo" >
+      <video autoplay muted loop controls id="myVideo" >
         <source src="Petersen_Automotive_Museum.mp4" type="video/mp4" >
           Your browser does not support HTML5 video.
       </video>
