dadwdsa dwa da asd sa

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
     </div>
 
     <main>
+      <video autoplay muted loop controls id="myVideoTwee">
+        <source src="cart.mp4" type="video/mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+      </video>
       <video autoplay muted loop controls id="myVideo" >
         <source src="Petersen_Automotive_Museum.mp4" type="video/mp4" >
           Your browser does not support HTML5 video.
@@ -75,6 +79,7 @@
       </article>
       <article class="smallright">
         <h1>Introduction</h1>
+
         <p>My name is Carlos, also called Graffe on&nbsp;<a href="https://www.twitch.tv/thegraffe" target="_blank">Twitch</a>. I was born in the Netherlands, and I started with streaming around August 2017. The reason behind streaming was simple for me, it was due to my Youtube channel being watched less slowly.</p>
         <p>I really enjoy playing games which led to eventually gathering the courage to broadcast my face on a huge platform, called Twitch. I gathered a stable base of viewers and people that enjoyed the content I streamed into the huge virtual world, this was a point where I felt like I could actually make this part of my life.</p>
         <p>Hence I am now a semi-full time streamer trying to gather a following in order to spread funny and enjoyable content!</p>
