--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/plusphones.css">
     <link rel="stylesheet" href="css/normaliphones.css">
+    <script src="js/main.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="thegraffe, fortnite pc's, carlos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,34 +16,6 @@
     <title>Fortnite PC's are overpriced.</title>
   </head>
   <body>
-    <script>
-    // When the user scrolls down 20px from the top of the document, show the button
-    window.onscroll = function() {scrollFunction()};
-
-    function scrollFunction() {
-      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        document.getElementById("myBtn").style.display = "block";
-      } else {
-        document.getElementById("myBtn").style.display = "none";
-      }
-    }
-
-    // When the user clicks on the button, scroll to the top of the document
-    function topFunction() {
-      document.body.scrollTop = 0; // For Safari
-      document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-    }
-
-      function myFunction() {
-          var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-              x.className += " responsive";
-            } else {
-              x.className = "topnav";
-            }
-          }
-    </script>
-
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="uparrow.png"></button>
     <div id="headwrapper">
     <header>
@@ -57,17 +30,19 @@
 </div>
     </div>
     <div id="bigimage">
+
           <p>Graffe's homepage.</p>
     </div>
 
     <main>
-      <video autoplay muted loop controls id="myVideoTwee">
-        <source src="cart.mp4" type="video/mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
-      </video>
+
       <video autoplay muted loop controls id="myVideo" >
         <source src="Petersen_Automotive_Museum.mp4" type="video/mp4" >
           Your browser does not support HTML5 video.
+      </video>
+      <video autoplay muted loop controls id="myVideoTwee">
+        <source src="cart.mp4" type="video/mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
       </video>
       <article class="bigleft">
         <h1>Welcome</h1>
@@ -77,19 +52,21 @@
           <li>Information about GRAFFE.</li>
         </ul>
       </article>
+
       <article class="smallright">
         <h1>Introduction</h1>
 
-        <p>My name is Carlos, also called Graffe on&nbsp;<a href="https://www.twitch.tv/thegraffe" target="_blank">Twitch</a>. I was born in the Netherlands, and I started with streaming around August 2017. The reason behind streaming was simple for me, it was due to my Youtube channel being watched less slowly.</p>
-        <p>I really enjoy playing games which led to eventually gathering the courage to broadcast my face on a huge platform, called Twitch. I gathered a stable base of viewers and people that enjoyed the content I streamed into the huge virtual world, this was a point where I felt like I could actually make this part of my life.</p>
-        <p>Hence I am now a semi-full time streamer trying to gather a following in order to spread funny and enjoyable content!</p>
+        <p>My name is Carlos, I stream on&nbsp;<a href="https://www.twitch.tv/thegraffe" target="_blank">Twitch</a>. I was born in the Netherlands, and I started with streaming around August 2017.</p>
+        <p>On the left side of this tab you can see a video of me, sitting in a shopping cart.</p>
 
       </article>
+
       <article class="lastarticle">
         <h1>Refresher</h1>
         <p>I'd like to invite you to watch my personal favourite video, published on my Youtube channel.</p>
         <iframe width="720" height="280" src="https://www.youtube.com/embed/cfTQpnveUgg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </article>
+
     </main>
 
     <footer>
