--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
 
       <article class="lastarticle">
         <h1>Refresher</h1>
-        <p>I'd like to invite you to watch my personal favourite video, published on my Youtube channel.</p>
-        <iframe width="720" height="280" src="https://www.youtube.com/embed/cfTQpnveUgg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>If you want to know even more about the content that I put out then</p>
+        <p id="lastarticlep2">please watch the video below</p>
+        <iframe src="https://www.youtube.com/embed/cfTQpnveUgg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Leave a like on the video if you enjoyed it. <br><br>There is so much more content on my <a href="https://www.youtube.com/c/notsocasualcarlos" target="_blank">Youtube</a>
+        <br><br>You can also navigate to my <a href="https://www.twitch.tv/thegraffe">Twitch</a> if you want to see live footage.</p>
       </article>
 
     </main>
