--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
     <i class="fa fa-bars"></i></a>
 </div>
     </div>
-    <div id="bigimage">
+    <div class="container">
+      <img src="http://i68.tinypic.com/2hnas8h.png" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text">
+          <a href="https://www.twitch.tv/thegraffe" id="TwitchText" target="_blank">Twitch</a>
+          <a href="https://www.twitter.com/thegraffe_" id="TwitterText" target="_blank">Twitter</a>
+        </div>
+      </div>
+    </div>
+    <div id="nextnav">
 
           <p>Graffe's homepage.</p>
     </div>
