--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <title>Fortnite PC's are overpriced.</title>
   </head>
   <body>
+    <div class="mainwrapper">
+
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="uparrow.png"></button>
     <div id="headwrapper">
     <header>
@@ -84,5 +86,7 @@
     <footer>
       <p>©2018 Carlos Miguel Publicatie zonder toestemming van de auteur is wettelijk verboden.</p>
     </footer>
+  </div>
+    
   </body>
 </html>
