--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <img src="http://i68.tinypic.com/2hnas8h.png" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
-          <a href="https://www.twitch.tv/thegraffe" id="TwitchText" target="_blank">Twitch</a>
+          <a href="https://www.twitch.tv/thegraffe" id="TwitchText" target="_blank"><img src="twitch.png" alt="Twitch Logo"></a>
           <a href="https://www.twitter.com/thegraffe_" id="TwitterText" target="_blank">Twitter</a>
         </div>
       </div>
@@ -87,6 +87,6 @@
       <p>©2018 Carlos Miguel Publicatie zonder toestemming van de auteur is wettelijk verboden.</p>
     </footer>
   </div>
-    
+
   </body>
 </html>
