--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="overlay">
         <div class="text">
           <a href="https://www.twitch.tv/thegraffe" id="TwitchText" target="_blank"><img src="twitch.png" alt="Twitch Logo"></a>
-          <a href="https://www.twitter.com/thegraffe_" id="TwitterText" target="_blank">Twitter</a>
+          <a href="https://www.twitter.com/thegraffe_" id="TwitterText" target="_blank"><img src="twitter.png" alt"Twitter Logo"></a>
         </div>
       </div>
     </div>
