--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/normaliphones.css">
     <script src="js/main.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <meta name="description" content="thegraffe, fortnite pc's, carlos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -17,16 +18,15 @@
   </head>
   <body>
     <div class="mainwrapper">
-
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="uparrow.png"></button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-alt-circle-up"></i></button>
     <div id="headwrapper">
     <header>
 <h1>THE GRAFFE'S HOME BASE</h1>
     </header>
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
-  <a href="meer_info.html">News</a>
-  <a href="tijdlijn.html">Contact</a>
+  <a href="index.html" class="active"><i class="fas fa-home"></i></a>
+  <a href="meer_info.html"><i class="far fa-newspaper"></i></a>
+  <a href="tijdlijn.html"><i class="fas fa-address-book"></i></a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i></a>
 </div>
@@ -36,7 +36,7 @@
       <div class="overlay">
         <div class="text">
           <a href="https://www.twitch.tv/thegraffe" id="TwitchText" target="_blank"><img src="twitch.png" alt="Twitch Logo"></a>
-          <a href="https://www.twitter.com/thegraffe_" id="TwitterText" target="_blank"><img src="twitter.png" alt"Twitter Logo"></a>
+          <a href="https://www.twitter.com/thegraffe_" id="TwitterText" target="_blank"><img src="twitter.png" alt="Twitter Logo"></a>
         </div>
       </div>
     </div>
