--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
     <main>
 
-      <video autoplay muted loop controls id="myVideo" >
+      <video autoplay muted loop id="myVideo" >
         <source src="Petersen_Automotive_Museum.mp4" type="video/mp4" >
           Your browser does not support HTML5 video.
       </video>
-      <video autoplay muted loop controls id="myVideoTwee">
+      <video autoplay muted loop id="myVideoTwee">
         <source src="cart.mp4" type="video/mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
