--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <img src="http://i68.tinypic.com/2hnas8h.png" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
-          <a href="https://www.twitch.tv/thegraffe" id="TwitchText" target="_blank"><img src="twitch.png" alt="Twitch Logo"></a>
-          <a href="https://www.twitter.com/thegraffe_" id="TwitterText" target="_blank"><img src="twitter.png" alt="Twitter Logo"></a>
+          <a href="https://www.twitch.tv/thegraffe" id="TwitchText" target="_blank"><img src="img/twitch.png" alt="Twitch Logo"></a>
+          <a href="https://www.twitter.com/thegraffe_" id="TwitterText" target="_blank"><img src="img/twitter.png" alt="Twitter Logo"></a>
           <hr>
         </div>
       </div>
@@ -47,11 +47,11 @@
     </div>
     <main>
       <video autoplay muted loop id="myVideo" >
-        <source src="looplogo.mp4" type="video/mp4" >
+        <source src="vid/looplogo.mp4" type="video/mp4" >
           Your browser does not support HTML5 video.
       </video>
       <video autoplay muted loop id="myVideoTwee">
-        <source src="cart.mp4" type="video/mp4" type="video/mp4">
+        <source src="vid/cart.mp4" type="video/mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
       <article class="bigleft">
